--- a/ProInt/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProInt/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -3,7 +3,7 @@
            <img src="../../../assets/fotop.jpg" class="img-fluid" id="fotoper" >
        </div>
        <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-           <p id="nombre" >Mamani Matias Ezequiel</p>
+           <p id="nombre" >{{persona.nombre}} {{persona.apellido}}</p>
            <p>Full Stack Developer Jr.</p>
        </div>
        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
